# a2rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
a2rs/: Cargo.toml  README.md  apple2_config.json
a2rs/roms/: README.md
a2rs/src/: apple2.rs  disk.rs  gamepad.rs  lib.rs  main.rs  memory.rs  profiler.rs  savestate.rs  sound.rs  test_cpu.rs  video.rs
a2rs/src/cpu/: mod.rs  opcodes2.rs
scripts/: build_installer.bat  build_installer.sh
src/: apple2.rs  config.rs  debug_test.rs  disk.rs  disk_log.rs  gui.rs  lib.rs  main.rs  memory.rs  profiler.rs  sound.rs
src/cpu/: addressing.rs  opcodes.rs
wix/: README.md  apple2_config.json  main.wxs
