[package]
name = "a2rs"
version = "0.2.0"
edition = "2021"
authors = ["A2RS Project"]
description = "A2RS - Apple II Emulator written in Rust"
license = "MIT"
repository = "https://github.com/user/a2rs"
keywords = ["apple2", "emulator", "6502", "retro"]
categories = ["emulators", "games"]

[lib]
name = "a2rs"
path = "src/lib.rs"

[[bin]]
name = "a2rs"
path = "src/main.rs"

[[bin]]
name = "cpu_test"
path = "src/bin/cpu_test.rs"

[dependencies]
# For serialization/deserialization of state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For logging
log = "0.4"
env_logger = "0.11"

# For command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# For random number generation
rand = "0.8"

# Cross-platform graphics
minifb = "0.27"

# Image processing for screenshots
png = "0.17"

# Date/time for profiler
chrono = "0.4"

# Audio output (optional - requires system audio libraries)
# Ubuntu/Debian: sudo apt-get install libasound2-dev
# Fedora: sudo dnf install alsa-lib-devel
# macOS/Windows: no additional packages needed
rodio = { version = "0.17", optional = true }

# Gamepad support (optional)
# Ubuntu/Debian: sudo apt-get install libudev-dev
gilrs = { version = "0.10", optional = true }

# Clipboard support for text input
# Linux: requires libxcb (sudo apt-get install libxcb-xfixes0-dev)
arboard = "3.2"

[features]
default = []
audio = ["rodio"]
gamepad = ["gilrs"]
full = ["audio", "gamepad"]

[profile.release]
opt-level = 3
lto = true

[dependencies.bitflags]
version = "2.4"

# ============================================
# Installer metadata
# ============================================

# cargo-deb metadata (Linux .deb package)
[package.metadata.deb]
maintainer = "A2RS Project"
copyright = "2024, A2RS Project"
license-file = ["LICENSE", "0"]
extended-description = """
A2RS is an Apple II emulator written in Rust.
Supports Apple II, II+, IIe, and IIe Enhanced models.
Features include accurate 6502/65C02 emulation, Disk II controller,
Hi-Res graphics, sound, and gamepad support.
"""
section = "games"
priority = "optional"
assets = [
    ["target/release/a2rs", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/a2rs/", "644"],
]

# cargo-wix metadata (Windows .msi installer)
[package.metadata.wix]
# Generate GUIDs with: uuidgen (Linux/macOS) or [guid]::NewGuid() (PowerShell)
upgrade-guid = "E8F2C4A1-9B3D-4E5F-A6C7-8D9E0F1A2B3C"
path-guid = "A1B2C3D4-E5F6-7890-1234-567890ABCDEF"
license = false
eula = false

